--- a/thesis/ref-lib.bib
+++ b/thesis/ref-lib.bib
@@ -209,3 +209,10 @@ urldate = {05-08-22}
   year={1990}
 }
 
+@techreport{schnaubelt2019comparison,
+  title={A comparison of machine learning model validation schemes for non-stationary time series data},
+  author={Schnaubelt, Matthias},
+  year={2019},
+  institution={FAU Discussion Papers in Economics}
+}
+
